--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -19,10 +19,15 @@
     font-weight: bold;
 }
 @media screen and (max-width: 768px) {
-    .projectsContainer h1 {
-        font-size: 3rem;
-    }
     .projectsContainer .Box {
         width: 100%;
+        padding: 0;
+    }
+    .projectsContainer .Grid {
+        width: 100%;
+        display: block;
+    }
+    .projectsContainer .Grid .GridItem {
+        max-width: 100%;
     }
 }
